fixed margin and alignment in index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
     background-image: url("../images/bg.png");
     color: #777;
     font-family: 'Arial', 'Helvectica Neue', Helvetica, sans-serif;
-    width: 960px;
+    /*width: 960px;*/
     margin: 0px;
     border: 3px solid green;
     }
@@ -92,17 +92,18 @@ main-content {
 #sidebar1 {
 
     width: 270px;
-    margin: auto;
-    padding: 2px;
-    height: auto;
+    margin-left: 20px;
+    /*padding: 2px;*/
+    /*height: auto;*/
     background-color: white;
     text-align: center;
-    float: right;
+    /*float: right;*/
     border: 3px solid red;
-
+    display: inline-block;
+    vertical-align: top;
+    position: fixed;
    }
        
-
 
 /* About me id styling*/
 
@@ -113,6 +114,7 @@ main-content {
     height: 325px;
     padding: 25px;
     /*margin-top: 300px;*/
+    display: inline-block;
     border: 3px solid blue;
 
 }
@@ -136,5 +138,5 @@ footer{
     text-align: center;
     bottom: 0;
     position: fixed;
-    border-top: solid pink 10px;
+    border-top: solid #4aaaa5 10px;
 }
